<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/feedback_reports_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/blue_primary"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reportTypeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/report_type"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/blue_primary"
                app:hintTextColor="@color/gray"
                android:textColorHint="@color/gray">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"
                    tools:ignore="LabelFor" />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_description_hint"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/blue_primary"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="153dp"
                    android:gravity="top"
                    android:padding="16dp"
                    android:importantForAccessibility="yes"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubmit"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:importantForAccessibility="yes"
                android:padding="16dp"
                android:text="@string/submit_report" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpdateStatus"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="43dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/yellow"
                android:importantForAccessibility="yes"
                android:padding="8dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/reportsHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/your_reports"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReports"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/report_item_layout"/>
</LinearLayout>